gcc/testsuite/algol68/compile/error-widening-6.a68
# { dg-options "-fstropping=upper" }  #

BEGIN
   LONG LONG INT d := LONG 0; # { dg-error "coerced" }  #
   d
END
